Fix overlap of the footer with search results
The overlap only happens when search results are dynamically updated.
When new results are loaded the "push div" disappears and the footer is
no longer properly pushed down to under the results.

This approach switches from using a "push div" to specifying bottom
padding on the body. This works but has the same caveat as the
"push div" in that it requires a fixed size, in this case `4em` to mimic
the behavior with the "push div".

I want to thank @entuland (entuland on #css@freenode) for their advice.

Fixes #256

--- a/html/hoogle.css
+++ b/html/hoogle.css
@@ -9,6 +9,7 @@ html {
 body {
     margin: 0px;
     padding: 0px;
+    padding-bottom: 4em;
     font-family: sans-serif;
     font-size: 13px;
     position: relative;
@@ -28,10 +29,6 @@ a:hover {
 a {
     color: #C4451D;
     text-decoration: none;
-}
-
-.push {
-    height: 4em;
 }
 
 /********************************************************************
